# st-device-sdk-c

./: .gitignore  .gitmodules  CHANGELOG  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  mbed_lib.json  stdkconfig  stdkconfig.cmake
doc/: APIs.md  Doxyfile  (+9 more)
example/esp32/main/: CMakeLists.txt  device_control.c  device_control.h  iot_cli_cmd.c  main.c  stdkconfig.cmake
example/raspberry/: CMakeLists.txt  README.md  onboarding_config.json  stdkconfig.cmake
src/: CMakeLists.txt  Kconfig  component.cmake  component.mk  iot_api.c  iot_capability.c  iot_crypto.c  iot_dump_log.c  iot_jwt.c  iot_log_file.c  iot_main.c  iot_mqtt.c  iot_nv_data.c  iot_root_ca.c  iot_serialize.c  iot_util.c  iot_uuid.c  iot_wt.c
src/crypto/: CMakeLists.txt  iot_crypto_ed25519.c
src/crypto/mbedtls/: iot_crypto_mbedtls.c
src/crypto/ss/: iot_crypto_ss.c
src/easysetup/: CMakeLists.txt  iot_easysetup_crypto.c  iot_easysetup_d2d.c  iot_easysetup_st_mqtt.c
src/easysetup/ble/: easysetup_ble.h  iot_easysetup_ble.c  iot_easysetup_ble_ecdh.c  iot_easysetup_ble_msg.c  iot_easysetup_ble_parser.c  iot_easysetup_ble_task.c  iot_easysetup_d2d_ble.c
src/easysetup/discovery/: iot_easysetup_discovery_ssid.c
src/easysetup/discovery/advertiser/: iot_easysetup_discovery_advertiser.c
src/easysetup/discovery/ssid/: iot_easysetup_discovery_ssid.c
src/easysetup/http/: easysetup_http.h  es_tcp_httpd.h  iot_easysetup_http.c  iot_easysetup_http_parser.c  iot_easysetup_http_tcp.c  iot_easysetup_tcp_httpd.c
src/easysetup/http/lwip_httpd/: fs.c  fsdata.h  fsdata_custom.c  httpd.c  httpd.h  httpd_opts.h  httpd_structs.h
src/easysetup/http/tcp/: iot_easysetup_d2d_tcp.c  iot_easysetup_http_socket.c  iot_easysetup_http_socket.h  iot_easysetup_http_tcp.c  iot_easysetup_httpd.c
src/easysetup/http/tls/: iot_easysetup_d2d_tls.c  iot_easysetup_http_tls.c
src/easysetup/posix_testing/: iot_easysetup_posix_testing.c
src/include/: iot_capability.h  iot_common.h  iot_crypto.h  iot_crypto_internal.h  iot_debug.h  iot_dump_log.h  iot_easysetup.h  iot_error.h  iot_internal.h  iot_jwt.h  iot_log_file.h  iot_main.h  iot_mqtt.h  iot_net.h  iot_nv_data.h  iot_serialize.h  iot_util.h  iot_uuid.h  iot_wt.h  st_caps.h  st_dev.h  st_dev_version.h
src/include/bsp/: iot_bsp_ble.h  iot_bsp_debug.h  iot_bsp_fs.h  iot_bsp_nv_data.h  iot_bsp_random.h  iot_bsp_system.h  iot_bsp_wifi.h
src/include/caps/: iot_caps_helper.h  iot_caps_helper_accelerationSensor.h  iot_caps_helper_activityLightingMode.h  iot_caps_helper_airQualitySensor.h  iot_caps_helper_alarm.h  iot_caps_helper_audioMute.h  iot_caps_helper_audioVolume.h  iot_caps_helper_battery.h  iot_caps_helper_bodyMassIndexMeasurement.h  iot_caps_helper_bodyWeightMeasurement.h  iot_caps_helper_button.h  iot_caps_helper_carbonDioxideHealthConcern.h  iot_caps_helper_carbonDioxideMeasurement.h  iot_caps_helper_carbonMonoxideDetector.h  iot_caps_helper_carbonMonoxideMeasurement.h  iot_caps_helper_colorControl.h  iot_caps_helper_colorTemperature.h  iot_caps_helper_contactSensor.h  iot_caps_helper_dishwasherOperatingState.h  iot_caps_helper_doorControl.h  iot_caps_helper_dryerOperatingState.h  iot_caps_helper_dustHealthConcern.h  iot_caps_helper_dustSensor.h  iot_caps_helper_energyMeter.h  iot_caps_helper_equivalentCarbonDioxideMeasurement.h  iot_caps_helper_execute.h  iot_caps_helper_fanOscillationMode.h  iot_caps_helper_fanSpeed.h  iot_caps_helper_filterStatus.h  iot_caps_helper_fineDustHealthConcern.h  iot_caps_helper_fineDustSensor.h  iot_caps_helper_firmwareUpdate.h  iot_caps_helper_formaldehydeMeasurement.h  iot_caps_helper_garageDoorControl.h  iot_caps_helper_gasMeter.h  iot_caps_helper_illuminanceMeasurement.h  iot_caps_helper_imageCapture.h  iot_caps_helper_lock.h  iot_caps_helper_mediaInputSource.h  iot_caps_helper_mediaPlayback.h  (+53 more)
src/include/certs/: boilerplate.h  root_ca.h
src/include/http/: iot_easysetup_http.h
src/include/mqtt/: iot_mqtt_client.h  iot_mqtt_connect.h  iot_mqtt_format.h  iot_mqtt_packet.h  iot_mqtt_publish.h  iot_mqtt_subscribe.h  iot_mqtt_unsubscribe.h
src/include/os/: iot_os_net.h  iot_os_util.h
src/include/port/: port_crypto.h  port_net.h
src/include/security/: iot_security_common.h  iot_security_crypto.h  iot_security_ecdh.h  iot_security_error.h  iot_security_helper.h  iot_security_manager.h  iot_security_storage.h  iot_security_util.h
src/mqtt/: CMakeLists.txt
src/mqtt/client/: iot_mqtt_client.c
src/mqtt/packet/: iot_mqtt_connect_client.c  iot_mqtt_connect_server.c  iot_mqtt_deserialize_publish.c  iot_mqtt_format.c  iot_mqtt_packet.c  iot_mqtt_serialize_publish.c  iot_mqtt_subscribe_client.c  iot_mqtt_subscribe_server.c  iot_mqtt_unsubscribe_client.c  iot_mqtt_unsubscribe_server.c
src/port/crypto/: CMakeLists.txt
src/port/net/: CMakeLists.txt
src/port/security/: iot_security_be_hardware_se.h
src/security/: CMakeLists.txt  iot_security_common.c  iot_security_crypto.c  iot_security_ecdh.c  iot_security_manager.c  iot_security_storage.c  iot_security_util.c
src/security/backend/: CMakeLists.txt
src/security/helper/: CMakeLists.txt
test/: CMakeLists.txt  TC_FUNC_iot_api.c  TC_FUNC_iot_capability.c  TC_FUNC_iot_crypto.c  TC_FUNC_iot_dump_log.c  TC_FUNC_iot_easysetup_crypto.c  TC_FUNC_iot_easysetup_d2d.c  TC_FUNC_iot_easysetup_http.c  TC_FUNC_iot_easysetup_http_parser.c  TC_FUNC_iot_easysetup_httpd.c  TC_FUNC_iot_easysetup_st_mqtt.c  TC_FUNC_iot_main.c  TC_FUNC_iot_mqtt_client.c  TC_FUNC_iot_nv_data.c  TC_FUNC_iot_security_be_bsp.c  TC_FUNC_iot_security_common.c  TC_FUNC_iot_security_crypto.c  TC_FUNC_iot_security_ecdh.c  TC_FUNC_iot_security_helper.c  TC_FUNC_iot_security_helper_ed25519.c  TC_FUNC_iot_security_manager.c  TC_FUNC_iot_security_storage.c  TC_FUNC_iot_util.c  TC_FUNC_iot_uuid.c  TC_FUNC_iot_wt.c  TC_FUNCs.h  TC_MOCK_functions.c  TC_MOCK_functions.h  TC_MOCK_iot_bsp.c  TC_MOCK_iot_net.c  TC_MOCK_iot_os.c  TC_STORY_easysetup_d2d.c  TC_UTIL_easysetup_common.c  TC_UTIL_easysetup_common.h  TC_iot_api.c  TC_iot_capability.c  TC_iot_easysetup_d2d.c  TC_iot_nv_data.c  TC_iot_util.c  TC_iot_uuid.c  (+5 more)
(+170 files in other folders)
